--- a/BUILD.gn
+++ b/BUILD.gn
@@ -4,12 +4,16 @@
 # found in the LICENSE file.
 
 import("//build/ohos.gni")
+import("build_overrides/skia.gni")
 
 import("m133/gn/codec.gni")
 import("m133/gn/fuchsia_defines.gni")
 import("m133/gn/shared_sources.gni")
 import("m133/gn/skia.gni")
 import("m133/gn/toolchain/wasm.gni")
+if (is_arkui_x) {
+  import("//foundation/arkui/ace_engine/ace_config.gni")
+}
 
 # skia_feature_upgrade
   if (defined(is_mingw) && is_mingw == true) {
@@ -76,6 +80,20 @@ import("m133/gn/toolchain/wasm.gni")
         public_deps = [ ":skia_canvaskit_static" ]
       } else {
         public_deps = [ ":skia_canvaskit" ]
+      }
+    }
+  }
+
+  if (is_arkui_x) {
+    foreach(item, ace_platforms) {
+      make_skia_deps(item.name) {
+        platform = item.name
+        config = {
+        }
+
+        if (defined(item.config)) {
+          config = item.config
+        }
       }
     }
   }
