--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -101,6 +101,7 @@ config("skia_public") {
       "SKIA_OHOS_SHADER_REDUCE",
       "SKIA_DFX_FOR_OHOS",
       "SKIA_DFX_FOR_RECORD_VKIMAGE",
+      "SKIA_OHOS_SINGLE_OWNER",
     ]
   }
   if (is_component_build) {
@@ -1558,6 +1559,11 @@ optional("gpu") {
     }
   }
   external_deps = []
+  if (is_ohos) {
+    external_deps += [
+      "hilog:libhilog",
+      ]
+  }
   if (skia_use_gl) {
     public_defines += [ "SK_GL" ]
     if (is_android) {
@@ -1810,6 +1816,7 @@ optional("graphite") {
   libs = []
   frameworks = []
   public_defines = []
+  external_deps = []
 
   enabled = skia_enable_graphite
   deps = [
@@ -1819,6 +1826,12 @@ optional("graphite") {
   public = skia_graphite_public
   sources = skia_graphite_sources
   sources += skia_sksl_graphite_modules_sources
+
+  if (is_ohos) {
+    external_deps += [
+      "hilog:libhilog",
+      ]
+  }
 
   if (is_android) {
     sources += skia_graphite_android_private
