--- a/m133/gn/skia.gni
+++ b/m133/gn/skia.gni
@@ -158,7 +158,7 @@ declare_args() {
   skia_use_libfuzzer_defaults = true
 
   # TODO: move to ace feature gni when ace feature is ready
-  ace_enable_skia_small_page_texture = true
+  ace_enable_skia_small_page_texture = false
 }
 
 declare_args() {
