--- a/m133/gn/core.gni
+++ b/m133/gn/core.gni
@@ -152,6 +152,7 @@ skia_core_sources = [
   "$_include/private/SkIDChangeListener.h",
   "$_include/private/SkSLSampleUsage.h",
   "$_include/private/base/SingleOwner.h",
+  "$_include/private/base/ImageStat.h",
   "$_include/private/base/SkAPI.h",
   "$_include/private/base/SkASAN.h",
   "$_include/private/base/SkAlign.h",
