--- a/m133/gn/gpu.gni
+++ b/m133/gn/gpu.gni
@@ -902,6 +902,7 @@ skia_shared_gpu_sources = [
   "$_include/gpu/MutableTextureState.h",
   "$_include/gpu/ShaderErrorHandler.h",
   "$_include/private/base/SingleOwner.h",
+  "$_include/private/base/ImageStat.h",
   "$_include/private/chromium/Slug.h",
   "$_src/gpu/AsyncReadTypes.h",
   "$_src/gpu/AtlasTypes.cpp",
