超大png图片跳过iTXt字段解析
Signed-off-by: y00656910 <yaoxingyu3@huawei.com>
Change-Id: Ib96e981a8d4a61b23920863e3c9526875697d893
Signed-off-by: y00656910 <yaoxingyu3@huawei.com>

--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -180,6 +180,10 @@ config("skia_public") {
     defines += [ "TURBO_PNG_MULTY_LINE_OPT" ]
   }
 
+  if (is_ohos) {
+    defines += [ "SK_DISABLE_PARSE_PNG_ITXT_TRUNK" ]
+  }
+
   if (skia_vk_enable_partialrender) {
     defines += [ "SK_VK_PARTIALRENDER" ]
   }
