--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -87,6 +87,7 @@ config("skia_public") {
     "USE_M133_SKIA",
     "TODO_M133_SKIA",
     "SK_USE_LEGACY_BLUR_RASTER",
+    "SK_OHOS_EXTENSION",
   ]
   if (defined(skia_ohos_debug) && skia_ohos_debug) {
     defines += [ "SKIA_OHOS_DEBUG" ]
