--- a/m133/BUILD.gn
+++ b/m133/BUILD.gn
@@ -174,7 +174,7 @@ config("skia_public") {
   }
 
   # OH ISSUE: jpeg optimize
-  if (target_platform == "pc") {
+  if (target_platform == "pc" || target_platform == "phone" || target_platform == "tablet") {
     defines += [ "TURBO_JPEG_HUFF_DECODE_OPT" ]
   }
   if (target_platform == "pc" || target_platform == "phone") {
