修复自定义字体跨平台内存一直增加的bug
Signed-off-by: liuwei <liuwei793@h-partners.com>
Change-Id: I69543490e81e7ff7816c3ae894e7829f61a021f9

--- a/BUILD.gn
+++ b/BUILD.gn
@@ -5002,6 +5002,9 @@ ohos_static_library("sksl_ext_static") {
     libs = []
 
     defines = skia_common_defines
+    if (is_arkui_x) {
+      defines += [ "ARKUI_X_ENABLE" ]
+    }
     cflags = skia_common_cflags
 
     if (skia_build_for_debugger) {
