--- a/BUILD.gn
+++ b/BUILD.gn
@@ -121,6 +121,22 @@ if (is_arkui_x) {
           "-Wl,-mllvm,-enable-partial-inlining",
           "-Wl,-mllvm,-tail-dup-profile-hot-percentile-override=999990",
         ]
+        if (skia_feature_enable_codemerge && !is_asan) {
+          ldflags += [
+            "-Wl,-plugin-opt=-split-machine-functions",
+            "-Wl,-mllvm",
+            "-Wl,-fixup-unconditional-branch-unsafely",
+            "-Wl,--no-create-thunks-introduced-by-mfs",
+            "-Wl,-mllvm",
+            "-Wl,-mfs-psi-cutoff=999500",
+            "-Wl,-z",
+            "-Wl,keep-text-section-prefix",
+            "-Wl,--symbol-ordering-file=" +
+                rebase_path("${skia_feature_pgo_path}/libskia_canvaskit.txt",
+                            root_build_dir),
+            "-Wl,--no-warn-symbol-ordering",
+          ]
+        }
       }
     }
   }
