--- a/BUILD.gn
+++ b/BUILD.gn
@@ -266,6 +266,8 @@ if (is_arkui_x) {
 
     defines = skia_common_defines
     cflags = skia_common_cflags
+    inputs = skia_common_inputs
+
     cflags += [
       "-Wno-ignored-attributes",
       "-ffunction-sections",
@@ -623,6 +625,7 @@ if (is_arkui_x) {
       defines += [ "ARKUI_X_ENABLE" ]
     }
     cflags = skia_common_cflags
+    inputs = skia_common_inputs
 
     if (skia_build_for_debugger) {
       defines += [ "SK_BUILD_FOR_DEBUGGER" ]
